[package]
name = "arbtest"
version = "0.3.1"
description = "A minimalist property-based testing library based on arbitrary"
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/arbtest"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2021"

exclude = [".github/", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
#arbitrary = { git = "https://github.com/yancyribbens/arbitrary.git", rev = "5d06035ac82aaec6add86f3c781a6c220ba00052", features = ["derive"] }
arbitrary = { git = "https://github.com/sivizius/arbitrary.git", rev = "c28e5fa123d6410cf810373bed5335386e45dae7", features = ["derive"] }

[dev-dependencies]
arbitrary = { git = "https://github.com/sivizius/arbitrary.git", rev = "c28e5fa123d6410cf810373bed5335386e45dae7", features = ["derive"] }
regex = { version = "0.1.5", package = "regex-lite" }
